<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="hello">Hello World, Login_view!</string>
	<string name="app_name">MyCC98</string>
	<string name="CCID">CCID</string>
	<string name="pswd">Password</string>
	<string name="title_wait">Wait</string>
	<string name="msg_wait">登录中...</string>
	<string name="title_login_fail">登录失败</string>
	<string name="msg_login_fail">用户名密码错误！</string>
	<string name="confirm">确定</string>
	<string name="title_wrong">错误</string>
	<string name="msg_null_name">用户名不能为空哦！</string>
	<string name="msg_null_pw">密码不能为空哦！</string>
	<string name="msg_login_ok">登录成功！</string>
	<string name="ZJU_WLAN">登录之前请务必确认已经连接ZJUWLAN！</string>
	<string name="user_name">用户名:</string>
	<string name="pw">登录密码:</string>
	<string name="rem_pw">记住密码</string>
	<string name="auto_login">自动登录</string>
	<string name="login_cancel">我就随便看看哈</string>
	<string name="login_confirm">登录</string>
	<string name="next_page">下一页</string>
	<string name="pre_page">上一页 </string>
	<string name="reply">回复</string>
	<string name="reply_content_topic">发帖主题</string>
	<string name="reply_content">内容</string>
	<string name="reply_succseed">回帖成功！</string>
	<string name="my_fav">我的定制区</string>
	<string name="reply_post">回复帖子</string>
	<string name="welcome_info">欢迎</string>
	<string name="board_list">论坛列表</string>
	<string name="message_box">收件箱</string>
	<string name="search">搜索</string>
	<string name="more">更多</string>
	<string name="go_back">返回</string>
	<string name="ensure_reply">确认回复</string>
	<string name="upload_image">上传附件</string>
	<string name="reply_you_can_type">16420字节</string>
	<string name="insert_expression">插入表情</string>
	<string name="post_title">发帖主题：</string>
	<string name="post_content">内容：</string>
	<string name="pm_activity_title">短消息</string>
	<string name="friends">好友</string>
	<string name="topic">主题：</string>
	<string name="author">By: </string>
	<string name="time">\@ </string>
	<string name="pm_reply">回复</string>
	<string name="first_page">第一页</string>
	<string name="last_page">最后一页</string>
	<string name="face_expression_ok">完成</string>
	<string name="post_content_length_overflow">内容长度不能大于16240Bytes！</string>
	<string name="title_length_overflow">标题长度不能超过100Bytes的，亲！</string>
	<string name="return_to_personal_board">返回定制区</string>
	<string name="exit">退出</string>
	<string name="log_out">重新登录</string>
	<string name="check_personal_info">查看个人信息</string>
	<string name="new_post">发表新话题</string>
	<string name="search_info">神奇的搜索框</string>
	<string name="search_input_error">输错啦！</string>
	<string name="jump_dialog_title">跳转</string>
	<string name="jump_button">跳</string>
	<string name="connectting">准备数据中...</string>
	<string name="quote_and_reply">引用并吐槽</string>
	<string name="send_pm">PM 发帖人</string>
	<string name="view_user_info">查看发帖人信息</string>
	<string name="cancel">取消</string>
	<string name="refresh">刷新</string>
	<string name="about">关于本软件</string>
	<string name="send_feedback">发送反馈</string>
	<string name="check_update">检查更新</string>
	<string name="test_board_name">MSTC Microsoft Technology Club</string>
	<string name="test_topic_name">超级大水库</string>
	<string name="test_author">DJ</string>
	<string name="test_time">2011年9月1日10:13</string>
	<string name="test_bm">版主：jiabin DJ </string>
	<string name="test_number">100</string>
	<string name="today">Today: </string>
	<string name="preview_reply">预览回复</string>
	<string name="add_to_friend_list">加为好友</string>
	<string name="menu_settings">设置</string>
	<string name="change_id">切换马甲</string>
	<string name="edit_post">编辑帖子</string>
</resources>
