<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/board_info_background"
    android:padding="6dp" >

    <!-- board name -->
        <TextView
            android:id="@+id/board_name"
            android:layout_width="fill_parent"
            android:layout_height="32sp"
            android:background="@drawable/listview_selector"
            android:text="@string/test_board_name"
            android:gravity="center_vertical"
            android:textColor="#000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/topic_number_today"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/board_name"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="4dp"
            android:text="@string/test_number"
            android:textColor="#222"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/topic_number_today_h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/topic_number_today"
            android:layout_toLeftOf="@id/topic_number_today"
            android:text="@string/today"
            android:textColor="@color/post_info"
            android:textSize="10sp" />

        <LinearLayout
            android:id="@+id/last_reply_time_clickable"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_alignParentRight="true"
            android:background="@drawable/reply_bg_selector"
            android:layout_below="@id/board_name"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/last_reply_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:text="@string/test_author"
                android:textColor="@color/post_list_last_reply_text_color"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/last_reply_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_time"
                android:textColor="@color/post_list_last_reply_text_color"
                android:textSize="10sp" />
        </LinearLayout>
        <TextView
            android:id="@+id/last_reply_topic_name"
            android:layout_width="140sp"
            android:layout_height="48sp"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/board_name"
            android:background="@drawable/listview_selector"
            android:gravity="center_vertical"
            android:text="@string/test_topic_name"
            android:textColor="@color/post_list_title"
            android:textSize="14sp" />
    </RelativeLayout>
