<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root" 
    android:orientation="vertical"
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent"
    android:background="#e7e7e7">

    <!-- Header -->
    <include layout="@layout/push_new_post_header"/>
   <!-- 提示 -->
    <TextView android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/post_title"/>
  
  <!-- 回复标题 -->
    <EditText  
    android:id="@+id/push_new_post_title" 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" 
    android:textSize="15sp" 
    /> 

		<!-- 回帖心情 -->
		<include layout="@layout/face_choose"/>
    
     <!-- 提示 -->
    <TextView android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/post_content"/>
    
    <!-- 回复内容 -->
    <EditText android:id="@+id/push_new_post_content" 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:layout_weight="1"
    android:textSize="15sp" 
    android:gravity="top"
     /> 
    
    <!-- 快速添加表情 -->
    <include layout="@layout/quick_emot_insert"/>
    
    
    <RelativeLayout android:layout_height="wrap_content"
            android:layout_width="fill_parent" 
             
            android:orientation="horizontal">
            
             <!-- 选择附件 --> 
            <Button android:id="@+id/push_new_post_upload_image_button"
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:layout_marginLeft="10dip"
            style="@style/blue_button" 
            android:text="@string/upload_image" />  
             <!-- 插入表情 --> 
            <Button android:id="@+id/push_new_post_insert_expression_button"
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:layout_toRightOf="@id/push_new_post_upload_image_button"
            style="@style/blue_button" 
            android:text="@string/insert_expression" />  
            
            <TextView android:id="@+id/chars_word" 
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"  
            android:gravity="right"
            android:paddingRight="10dip"
            android:layout_alignParentRight="true" 
             android:background="@drawable/write_corner"
            android:text="@string/reply_you_can_type" /> 
  
     </RelativeLayout>
</LinearLayout>